--- a/src/sim/Makefile.in
+++ b/src/sim/Makefile.in
@@ -171,4 +171,60 @@ clean:
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
-
+carray.o: macros.h ctypes.h chead.h cobject.h defs.h util.h errmsg.h carray.h
+ccor.o: ccor.h cobject.h defs.h util.h
+cdensity.o: macros.h ctypes.h chead.h cobject.h defs.h util.h cdensity.h
+cdensity.o: cstat.h
+cdetect.o: csimul.h defs.h util.h errmsg.h chead.h cobject.h cmsgheap.h
+cdetect.o: coutvect.h ccor.h cdetect.h cstat.h
+cfsm.o: macros.h ctypes.h chead.h cobject.h defs.h util.h cfsm.h
+cgate.o: cmessage.h cobject.h defs.h util.h carray.h cpar.h csimul.h errmsg.h
+cgate.o: chead.h cmsgheap.h coutvect.h ccor.h cmodule.h cqueue.h cgate.h
+cgate.o: cenvir.h macros.h ctypes.h
+chead.o: macros.h ctypes.h chead.h cobject.h defs.h util.h
+chist.o: macros.h ctypes.h chead.h cobject.h defs.h util.h cdetect.h cstat.h
+chist.o: chist.h cdensity.h
+cksplit.o: macros.h ctypes.h chead.h cobject.h defs.h util.h cenvir.h
+cksplit.o: cksplit.h cdensity.h cstat.h
+cllist.o: macros.h ctypes.h chead.h cobject.h defs.h util.h cllist.h
+cmessage.o: macros.h ctypes.h chead.h cobject.h defs.h util.h cmodule.h
+cmessage.o: ccor.h carray.h cqueue.h cgate.h csimul.h errmsg.h cmsgheap.h
+cmessage.o: coutvect.h cmessage.h cpar.h
+cmodule.o: cmodule.h cobject.h defs.h util.h ccor.h chead.h carray.h cqueue.h
+cmodule.o: cgate.h csimul.h errmsg.h cmsgheap.h coutvect.h cmessage.h cpar.h
+cmodule.o: ctypes.h cnetmod.h cenvir.h
+cmsgheap.o: macros.h ctypes.h chead.h cobject.h defs.h util.h cmessage.h
+cmsgheap.o: carray.h cpar.h csimul.h errmsg.h cmsgheap.h coutvect.h ccor.h
+cnetmod.o: cpar.h cobject.h defs.h util.h carray.h cenvir.h cnetmod.h
+cnetmod.o: cmodule.h ccor.h chead.h cqueue.h cgate.h csimul.h errmsg.h
+cnetmod.o: cmsgheap.h coutvect.h
+cobject.o: csimul.h defs.h util.h errmsg.h chead.h cobject.h cmsgheap.h
+cobject.o: coutvect.h ccor.h cenvir.h macros.h ctypes.h
+coutvect.o: coutvect.h cobject.h defs.h util.h cmodule.h ccor.h chead.h
+coutvect.o: carray.h cqueue.h cgate.h csimul.h errmsg.h cmsgheap.h cenvir.h
+cpacket.o: macros.h ctypes.h chead.h cobject.h defs.h util.h cpacket.h
+cpacket.o: cmessage.h carray.h cpar.h csimul.h errmsg.h cmsgheap.h coutvect.h
+cpacket.o: ccor.h
+cpar.o: cpar.h cobject.h defs.h util.h carray.h cstat.h macros.h ctypes.h
+cpar.o: chead.h errmsg.h cmodule.h ccor.h cqueue.h cgate.h csimul.h
+cpar.o: cmsgheap.h coutvect.h cenvir.h
+cpsquare.o: macros.h ctypes.h chead.h cobject.h defs.h util.h cpsquare.h
+cpsquare.o: cdensity.h cstat.h
+cqueue.o: macros.h ctypes.h chead.h cobject.h defs.h util.h cqueue.h
+csimul.o: cmodule.h cobject.h defs.h util.h ccor.h chead.h carray.h cqueue.h
+csimul.o: cgate.h csimul.h errmsg.h cmsgheap.h coutvect.h cmessage.h cpar.h
+csimul.o: cenvir.h ctypes.h cnetmod.h cstat.h
+cstat.o: cstat.h cobject.h defs.h util.h macros.h ctypes.h chead.h cdetect.h
+cstk.o: cstk.h ccor.h cobject.h defs.h util.h errmsg.h
+ctopo.o: macros.h ctypes.h chead.h cobject.h defs.h util.h cmodule.h ccor.h
+ctopo.o: carray.h cqueue.h cgate.h csimul.h errmsg.h cmsgheap.h coutvect.h
+ctopo.o: cpar.h cllist.h ctopo.h
+ctypes.o: cpar.h cobject.h defs.h util.h carray.h cmodule.h ccor.h chead.h
+ctypes.o: cqueue.h cgate.h csimul.h errmsg.h cmsgheap.h coutvect.h macros.h
+ctypes.o: ctypes.h
+cvarhist.o: macros.h ctypes.h chead.h cobject.h defs.h util.h cvarhist.h
+cvarhist.o: chist.h cdensity.h cstat.h
+cwatch.o: cwatch.h cobject.h defs.h util.h
+util.o: util.h defs.h csimul.h errmsg.h chead.h cobject.h cmsgheap.h
+util.o: coutvect.h ccor.h macros.h ctypes.h cwatch.h cpacket.h cmessage.h
+util.o: carray.h cpar.h
