--- a/src/cmdenv/Makefile.in
+++ b/src/cmdenv/Makefile.in
@@ -51,4 +51,10 @@ clean:
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
-
+cmdenv.o: cmdenv.h ../sim/ctypes.h ../sim/chead.h ../sim/cobject.h
+cmdenv.o: ../sim/defs.h ../sim/util.h ../sim/csimul.h ../sim/errmsg.h
+cmdenv.o: ../sim/cmsgheap.h ../sim/coutvect.h ../sim/ccor.h
+cmdenv.o: ../envir/omnetapp.h ../sim/carray.h ../sim/cenvir.h enumstr.h
+cmdenv.o: ../envir/slaveapp.h ../envir/cinifile.h ../sim/cmodule.h
+cmdenv.o: ../sim/cqueue.h ../sim/cgate.h ../sim/cnetmod.h ../envir/args.h
+enumstr.o: enumstr.h
