--- a/src/nedc/Makefile.in
+++ b/src/nedc/Makefile.in
@@ -56,4 +56,10 @@ clean:
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
-
+ebnf.tab.o: ebnfcfg.h jar_func.h
+jar.o: jar_func.h jar_lib.h
+jar_expr.o: jar_func.h jar_lib.h
+jar_lib.o: jar_func.h jar_lib.h
+jar_mem.o: jar_func.h
+jar_mod.o: jar_func.h jar_lib.h
+lex.yy.o: ebnf.tab.h
