*** empty log message ***

--- a/configure.in
+++ b/configure.in
@@ -66,8 +66,8 @@ AC_CHECK_LIB(dl, dlopen,
    USE_DLOPEN=0)
 
 #---PVM_LIBS---
-# PVM_INCL_PATH='-I$PVM_ROOT/include'
-# PVM_LIB_PATH='-L$PVM_ROOT/lib/$PVM_ARCH'
+# PVM_INCL_DIR='$PVM_ROOT/include'
+# PVM_LIB_DIR='$PVM_ROOT/lib/$PVM_ARCH'
 AC_CHECK_LIB(pvm3, pvm_recv,
   PVM_LIBS="$MINUS_L -lpvm3",
   PVM_LIBS="")
@@ -120,15 +120,14 @@ AC_CHECK_FUNCS(select strdup strspn strstr)
 #----------------------
 OMNETPP_ROOT=`pwd`
 
-OMNETPP_BIN_DIR='$(OMNETPP_ROOT)/bin'
-OMNETPP_LIB_DIR='$(OMNETPP_ROOT)/lib'
-OMNETPP_SRC_DIR='$(OMNETPP_ROOT)/src'
-OMNETPP_SAMPLES_DIR='$(OMNETPP_ROOT)/samples'
-OMNETPP_MODELS_DIR='$(OMNETPP_ROOT)/models'
-OMNETPP_BITMAP_PATH='$(OMNETPP_ROOT)/bitmaps'
+OMNETPP_BIN_DIR="$(OMNETPP_ROOT)/bin"
+OMNETPP_INCL_DIR="$(OMNETPP_SRC_DIR)/sim"
+OMNETPP_LIB_DIR="$(OMNETPP_ROOT)/lib"
 
-OMNETPP_INCL_PATH='-I$(OMNETPP_SRC_DIR)/sim'
-OMNETPP_LIB_PATH='-L$(OMNETPP_ROOT)/lib'
+OMNETPP_SRC_DIR="$(OMNETPP_ROOT)/src"
+OMNETPP_SAMPLES_DIR="$(OMNETPP_ROOT)/samples"
+OMNETPP_MODELS_DIR="$(OMNETPP_ROOT)/models"
+OMNETPP_BITMAP_PATH="$(OMNETPP_ROOT)/bitmaps"
 
 # If you change this setting, remember to delete the other set of libraries
 # (or at least the soft links from lib/).
@@ -184,21 +183,22 @@ AC_SUBST(SO_LIB_SUFFIX)
 AC_SUBST(LIB_SUFFIX)
 
 AC_SUBST(USE_DLOPEN)
-AC_SUBST(TV_INCL_PATH)
+AC_SUBST(TV_INCL_DIR)
 AC_SUBST(TV_LIBS)
-AC_SUBST(TK_INCL_PATH)
+AC_SUBST(TK_INCL_DIR)
 AC_SUBST(TK_LIBS)
-AC_SUBST(PVM_INCL_PATH)
+AC_SUBST(PVM_INCL_DIR)
 AC_SUBST(PVM_LIBS)
 AC_SUBST(SYS_LIBS)
 
-AC_SUBST(OMNETPP_ROOT)
+AC_SUBST(OMNETPP_BIN_DIR)
+AC_SUBST(OMNETPP_INCL_DIR)
+AC_SUBST(OMNETPP_LIB_DIR)
+AC_SUBST(OMNETPP_BITMAP_PATH)
+
 AC_SUBST(OMNETPP_SRC_DIR)
 AC_SUBST(OMNETPP_SAMPLES_DIR)
 AC_SUBST(OMNETPP_MODELS_DIR)
-AC_SUBST(OMNETPP_INCL_PATH)
-AC_SUBST(OMNETPP_LIB_PATH)
-AC_SUBST(OMNETPP_BITMAP_PATH)
 
 AC_SUBST(TKENV_IF_POSSIBLE)
 AC_SUBST(TVENV_IF_POSSIBLE)
