--- a/src/cmdenv/Makefile.in
+++ b/src/cmdenv/Makefile.in
@@ -8,9 +8,7 @@ RANLIB=@RANLIB@
 
 CFLAGS=@CFLAGS@
 
-OMNETPP_ROOT=@OMNETPP_ROOT@
-OMNETPP_SRC_DIR=@OMNETPP_SRC_DIR@
-OMNETPP_INCL_PATH=@OMNETPP_INCL_PATH@
+OMNETPP_INCL_DIR=@OMNETPP_INCL_DIR@
 
 # LIB_SUFFIX is either A_LIB_SUFFIX or SO_LIB_SUFFIX
 LIB_SUFFIX=@LIB_SUFFIX@
@@ -21,9 +19,7 @@ SO_LIB_SUFFIX=@SO_LIB_SUFFIX@
 #
 # Local definitions
 #
-ENVIR_INCL_PATH=-I../envir
-
-COPTS=$(CLFAGS) $(OMNETPP_INCL_PATH) $(ENVIR_INCL_PATH)
+COPTS=$(CLFAGS) -I$(OMNETPP_INCL_DIR) -I../envir
 
 OBJS = cmdenv.o enumstr.o heap.o
 
