--- a/src/tkenv/Makefile.in
+++ b/src/tkenv/Makefile.in
@@ -8,12 +8,10 @@ RANLIB=@RANLIB@
 
 CFLAGS=@CFLAGS@
 
-OMNETPP_ROOT=@OMNETPP_ROOT@
-OMNETPP_SRC_DIR=@OMNETPP_SRC_DIR@
-OMNETPP_INCL_PATH=@OMNETPP_INCL_PATH@
+OMNETPP_INCL_DIR=@OMNETPP_INCL_DIR@
 OMNETPP_BITMAP_PATH=@OMNETPP_BITMAP_PATH@
 
-TK_INCL_PATH=@TK_INCL_PATH@
+TK_INCL_DIR=@TK_INCL_DIR@
 
 # LIB_SUFFIX is either A_LIB_SUFFIX or SO_LIB_SUFFIX
 LIB_SUFFIX=@LIB_SUFFIX@
@@ -24,9 +22,7 @@ SO_LIB_SUFFIX=@SO_LIB_SUFFIX@
 #
 # Local definitions
 #
-ENVIR_INCL_PATH=-I../envir
-
-COPTS=-fwritable-strings $(CFLAGS) $(OMNETPP_INCL_PATH) $(ENVIR_INCL_PATH) $(TK_INCL_PATH)
+COPTS=$(CFLAGS) -fwritable-strings -I$(OMNETPP_INCL_DIR) -I../envir -I$(TK_INCL_DIR)
 
 OMNETPP_TKENV_DIR=$(OMNETPP_SRC_DIR)/tkenv
 
