*** empty log message ***

--- a/src/gned/Makefile.in
+++ b/src/gned/Makefile.in
@@ -11,14 +11,14 @@ LDFLAGS=@LDFLAGS@
 
 OMNETPP_BITMAP_PATH=@OMNETPP_BITMAP_PATH@
 
-TK_INCL_DIR=@TK_INCL_DIR@
+TK_CFLAGS=@TK_CFLAGS@
 TK_LIBS=@TK_LIBS@
 SYS_LIBS=@SYS_LIBS@
 
 #
 # Local definitions
 #
-COPTS=$(CFLAGS) -fwritable-strings -I$(TK_INCL_DIR)
+COPTS=$(CFLAGS) $(TK_CFLAGS)
 
 OMNETPP_GNED_DIR=`pwd`
 
