--- a/configure.in
+++ b/configure.in
@@ -77,6 +77,7 @@ AC_CHECK_LIB(gpvm3, pvm_joingroup,
   $PVM_LIBS)
 
 #---TK_LIBS---
+TK_CFLAGS="-fwritable-strings"
 OPP_CHECK_LIB_WITHPATH(X11, XDrawLine, /usr/X11/lib,
   X_LIBS="$MINUS_L -lX11",
   X_LIBS="")
@@ -87,6 +88,7 @@ AC_CHECK_LIB(tk, Tk_BindEvent,
    $TCL_LIBS $X_LIBS -ldl)
 
 #---TV_LIBS---
+TV_CFLAGS="-I/usr/include/tvision"
 AC_CHECK_LIB(tv, some_cpp_func_in_TV,
    TV_LIBS="$MINUS_L -ltv",
    TV_LIBS="")
@@ -120,14 +122,14 @@ AC_CHECK_FUNCS(select strdup strspn strstr)
 #----------------------
 OMNETPP_ROOT=`pwd`
 
-OMNETPP_BIN_DIR="$(OMNETPP_ROOT)/bin"
-OMNETPP_INCL_DIR="$(OMNETPP_SRC_DIR)/sim"
-OMNETPP_LIB_DIR="$(OMNETPP_ROOT)/lib"
+OMNETPP_SRC_DIR="$OMNETPP_ROOT/src"
+OMNETPP_SAMPLES_DIR="$OMNETPP_ROOT/samples"
+OMNETPP_MODELS_DIR="$OMNETPP_ROOT/models"
+OMNETPP_BITMAP_PATH="$OMNETPP_ROOT/bitmaps"
 
-OMNETPP_SRC_DIR="$(OMNETPP_ROOT)/src"
-OMNETPP_SAMPLES_DIR="$(OMNETPP_ROOT)/samples"
-OMNETPP_MODELS_DIR="$(OMNETPP_ROOT)/models"
-OMNETPP_BITMAP_PATH="$(OMNETPP_ROOT)/bitmaps"
+OMNETPP_BIN_DIR="$OMNETPP_ROOT/bin"
+OMNETPP_INCL_DIR="$OMNETPP_SRC_DIR/sim"
+OMNETPP_LIB_DIR="$OMNETPP_ROOT/lib"
 
 # If you change this setting, remember to delete the other set of libraries
 # (or at least the soft links from lib/).
@@ -183,9 +185,9 @@ AC_SUBST(SO_LIB_SUFFIX)
 AC_SUBST(LIB_SUFFIX)
 
 AC_SUBST(USE_DLOPEN)
-AC_SUBST(TV_INCL_DIR)
+AC_SUBST(TV_CFLAGS)
 AC_SUBST(TV_LIBS)
-AC_SUBST(TK_INCL_DIR)
+AC_SUBST(TK_CFLAGS)
 AC_SUBST(TK_LIBS)
 AC_SUBST(PVM_INCL_DIR)
 AC_SUBST(PVM_LIBS)
