--- a/src/tkenv/Makefile.in
+++ b/src/tkenv/Makefile.in
@@ -11,7 +11,7 @@ CFLAGS=@CFLAGS@
 OMNETPP_INCL_DIR=@OMNETPP_INCL_DIR@
 OMNETPP_BITMAP_PATH=@OMNETPP_BITMAP_PATH@
 
-TK_INCL_DIR=@TK_INCL_DIR@
+TK_CFLAGS=@TK_CFLAGS@
 
 # LIB_SUFFIX is either A_LIB_SUFFIX or SO_LIB_SUFFIX
 LIB_SUFFIX=@LIB_SUFFIX@
@@ -22,7 +22,7 @@ SO_LIB_SUFFIX=@SO_LIB_SUFFIX@
 #
 # Local definitions
 #
-COPTS=$(CFLAGS) -fwritable-strings -I$(OMNETPP_INCL_DIR) -I../envir -I$(TK_INCL_DIR)
+COPTS=$(CFLAGS) -I$(OMNETPP_INCL_DIR) -I../envir $(TK_CFLAGS)
 
 OMNETPP_TKENV_DIR=$(OMNETPP_SRC_DIR)/tkenv
 
